--- a/html/index.html
+++ b/html/index.html
@@ -87,25 +87,25 @@
         <div class="ui-container f-cb">
             <div class="ui-intro bgc-white">
                 <div class="item">
-                    <div class="div-icon"><i class="icon-intro1"></i></div>
+                    <div class="div-icon div-icon1"><i class="icon-intro1"></i></div>
                     <div class="info">
-                        <h3>收益高 门槛低</h3>
+                        <h3>收益<strong>高</strong> 门槛<strong>低</strong></h3>
                         <p>100元起步</p>
                         <p>稳享最高15%年化收益</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="div-icon"><i class="icon-intro2"></i></div>
+                    <div class="div-icon div-icon2"><i class="icon-intro2"></i></div>
                     <div class="info">
-                        <h3>独有风控体系</h3>
+                        <h3><strong>独有</strong>风控体系</h3>
                         <p>5大流程  49道环节</p>
                         <p>环环把控</p>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="div-icon"><i class="icon-intro3"></i></div>
+                <div class="item last">
+                    <div class="div-icon div-icon3"><i class="icon-intro3"></i></div>
                     <div class="info">
-                        <h3>100%本息保障</h3>
+                        <h3>100%<strong>本息保障</strong></h3>
                         <p>让您的收益  涨不停</p>
                     </div>
                 </div>
@@ -123,6 +123,194 @@
                         <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
                         <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
                         <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="ui-container">
+            <div class="ui-newcomer mt15 mb15">
+                <i class="icon-newcomer"></i>
+                <div class="item">
+                    <div class="f-fl item-info">
+                        <div class="tit"><i class="icon-new"></i>项目：知名电气企业流动资金项目3期</div>
+                        <div class="attr">
+                            <p class="p1">
+                                <span>预计收益：<em class="red">13.20%</em></span><span>项目总额：120万元</span><span>项目期限：90天</span>
+                            </p>
+                            <p>
+                                <span><i class="icon-ensure"></i>担保：到期本息</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="f-fr item-handle">
+                        <div class="link mb20">
+                            <a href="#">了解新手标</a>&nbsp;|&nbsp;<a href="#">项目列表></a>
+                        </div>
+                        <div class="mb5">
+                            <a target="_blank" class="ui-button ui-button-mid ui-button-red btn-invest" href="#">立即投资</a>
+                        </div>
+                        <div class="jindu">已募集<span class="num">58%</span>
+                            <span class="ui-rate">
+                                <span class="progressBar">
+                                    <span style="width: 67%;" class="barIn"></span>
+                                </span>
+                            </span>
+                        </div>  
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui-automatic">
+                <ul class="f-cb">
+                    <li>
+                        <div class="tit">
+                            <span class="mr5"><em>30</em>天</span>
+                            <span>自动理财</span>
+                        </div>
+                        <div class="con">
+                            <div class="syl f-cb">
+                                <span class="span1">8.5</span>
+                                <div class="div1">
+                                    <span>%</span>
+                                    <p>年化收益率</p>
+                                </div>
+                            </div>
+                            <p class="p1">有抵押 高收益</p>
+                        </div>
+                        <div class="bottom">
+                            <span class="f-fr start-time">09月01日  10:00开始</span>
+                            <i class="icon-time"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="tit">
+                            <span class="mr5"><em>90</em>天</span>
+                            <span>自动理财</span>
+                        </div>
+                        <div class="con">
+                            <div class="syl f-cb">
+                                <span class="span1">11.5</span>
+                                <div class="div1">
+                                    <span>%</span>
+                                    <p>年化收益率</p>
+                                </div>
+                            </div>
+                            <p class="p1">有抵押 高收益</p>
+                        </div>
+                        <div class="bottom">
+                            <span class="f-fr start-time">09月01日  10:00开始</span>
+                            <i class="icon-time"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="tit">
+                            <span class="mr5"><em>120</em>天</span>
+                            <span>自动理财</span>
+                        </div>
+                        <div class="con">
+                            <div class="syl f-cb">
+                                <span class="span1">12.5</span>
+                                <div class="div1">
+                                    <span>%</span>
+                                    <p>年化收益率</p>
+                                </div>
+                            </div>
+                            <p class="p1">有抵押 高收益</p>
+                        </div>
+                        <div class="bottom">
+                            <span class="f-fr start-time">09月01日  10:00开始</span>
+                            <i class="icon-time"></i>
+                        </div>
+                    </li>
+                    <li class="last">
+                        <div class="tit">
+                            <span class="mr5"><em>360</em>天</span>
+                            <span>自动理财</span>
+                        </div>
+                        <div class="con">
+                            <div class="syl f-cb">
+                                <span class="span1">14.5</span>
+                                <div class="div1">
+                                    <span>%</span>
+                                    <p>年化收益率</p>
+                                </div>
+                            </div>
+                            <p class="p1">有抵押 高收益</p>
+                        </div>
+                        <div class="bottom">
+                            <span class="f-fr start-time">09月01日  10:00开始</span>
+                            <i class="icon-time"></i>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="ui-direct">
+                <div class="tit">
+                    <a href="#" class="f-fr more mr10">项目列表></a>
+                    <h3>预期年化收益率12%-14%,p2p p2c 投产业</h3>
+                </div>
+                <div class="list">
+                    <ul class="f-cb">
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-blue" href="#">即将发布</a>
+                            </div>
+                            <div class="time pt15">
+                                <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
