--- a/html/index.html
+++ b/html/index.html
@@ -311,6 +311,272 @@
                                 <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
                             </div>
                         </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <i class="icon-full"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">已满标<em class="f12">[还款中]</em></a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">100%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 100%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="zhejiao"></i>
+                            <div class="name">
+                                <span class="youniu"><img src="../images/index/youniu.png"></span>
+                                <h3>项目：知名电气企业流动资金项目</h3>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1">高收益 有保障</p>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="ad01 f-cb mt15 mb15"><img class="f-fl" src="../images/index/ad01.jpg"></div>
+        
+            <div class="ui-box f-cb">
+                <div class="ui-news bgc-white">
+                    <div class="ui-title">
+                        <a href="#" class="more">更多></a>
+                        <h2><i class="icon-news"></i>媒体报道</h2>
+                    </div>
+                    <div class="ui-news-con">
+                        <div class="news-img">
+                            <ul class="f-cb">
+                                <li><a href="#"><img src="../images/index/news01.jpg"></a></li>
+                                <li><a href="#"><img src="../images/index/news02.jpg"></a></li>
+                                <li><a href="#"><img src="../images/index/news03.jpg"></a></li>
+                            </ul>
+                        </div>
+                        <div class="news-list">
+                            <ul>
+                                <li><span class="time f-fr">2015-08-26</span><a href="#">[中新网] 央行年内第四次双降 投资首选靠谱投牛网</a></li>
+                                <li><span class="time f-fr">2015-08-26</span><a href="#">[中新网] 央行年内第四次双降 投资首选靠谱投牛网</a></li>
+                                <li><span class="time f-fr">2015-08-26</span><a href="#">[中新网] 央行年内第四次双降 投资首选靠谱投牛网</a></li>
+                            </ul>
+                        </div>
+                        <div class="pl20 pr20">
+                            <div class="news-media">
+                                <ul class="f-cb">
+                                    <li><a href="#"><img src="../images/index/news/sina.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/soho.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/ifeng.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/people.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/hexun.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/jrj.jpg"></a></li>
+                                    <li><a href="#"><img src="../images/index/news/zhengquan.jpg"></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ui-predict bgc-white">
+                    <div class="ui-title">
+                        <a href="#" class="more">更多></a>
+                        <h2><i class="icon-predict"></i>项目预告</h2>
+                    </div>
+                    <div class="ui-predict-list">
+                        <ul>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                            <li><span>[08.20]</span><a href="#">《浪漫乞巧节 人人有“7息”》</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui-cooperation bgc-white mt15 mb15">
+                <div class="ui-title">
+                    <a href="#" class="more">更多></a>
+                    <h2><i class="icon-news"></i>合作伙伴</h2>
+                </div>
+                <div class="ui-cooperation-list">
+                    <ul class="f-cb">
+                        <li><a href="#"><img src="../images/index/cooperation/heying.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/zhongtian.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/cfca.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/rfc.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/beifu.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/gongshang.png"></a></li>
+                        <li><a href="#"><img src="../images/index/cooperation/minsheng.jpg"></a></li>
                     </ul>
                 </div>
             </div>
@@ -319,7 +585,9 @@
     <div class="ui-footer">
 		
     </div>
-
+<script type="text/javascript">
+    seajs.use("../js/page/index.js");
+</script>
 </div>
 </body>
 </html> 
