--- a/html/index.html
+++ b/html/index.html
@@ -165,8 +165,7 @@
                 <ul class="f-cb">
                     <li>
                         <div class="tit">
-                            <span class="mr5"><em>30</em>天</span>
-                            <span>自动理财</span>
+                            <span>优牛计划 <span class="span-c">| 30天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -176,17 +175,14 @@
                                     <p>年化收益率</p>
                                 </div>
                             </div>
-                            <p class="p1">有抵押 高收益</p>
                         </div>
                         <div class="bottom">
-                            <span class="f-fr start-time">09月01日  10:00开始</span>
-                            <i class="icon-time"></i>
+                            <div class="btn"><a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a></div>
                         </div>
                     </li>
                     <li>
                         <div class="tit">
-                            <span class="mr5"><em>90</em>天</span>
-                            <span>自动理财</span>
+                            <span>优牛计划 <span class="span-c">| 30天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -196,17 +192,14 @@
                                     <p>年化收益率</p>
                                 </div>
                             </div>
-                            <p class="p1">有抵押 高收益</p>
                         </div>
                         <div class="bottom">
-                            <span class="f-fr start-time">09月01日  10:00开始</span>
-                            <i class="icon-time"></i>
+                            <div class="btn"><a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a></div>
                         </div>
                     </li>
                     <li>
                         <div class="tit">
-                            <span class="mr5"><em>120</em>天</span>
-                            <span>自动理财</span>
+                            <span>优牛计划 <span class="span-c">| 90天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -216,7 +209,6 @@
                                     <p>年化收益率</p>
                                 </div>
                             </div>
-                            <p class="p1">有抵押 高收益</p>
                         </div>
                         <div class="bottom">
                             <span class="f-fr start-time">09月01日  10:00开始</span>
@@ -225,8 +217,7 @@
                     </li>
                     <li class="last">
                         <div class="tit">
-                            <span class="mr5"><em>360</em>天</span>
-                            <span>自动理财</span>
+                            <span>优牛计划 <span class="span-c">| 120天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -236,7 +227,6 @@
                                     <p>年化收益率</p>
                                 </div>
                             </div>
-                            <p class="p1">有抵押 高收益</p>
                         </div>
                         <div class="bottom">
                             <span class="f-fr start-time">09月01日  10:00开始</span>
@@ -254,9 +244,7 @@
                 <div class="list">
                     <ul class="f-cb">
                         <li>
-                            <i class="zhejiao"></i>
                             <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
                                 <h3>项目：知名电气企业流动资金项目</h3>
                             </div>
                             <div class="pl15 pr15">
@@ -285,10 +273,8 @@
                             </div>
                         </li>
 
-                        <li id="li1">
-                            <i class="zhejiao"></i>
+                        <li>
                             <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
                                 <h3>项目：知名电气企业流动资金项目</h3>
                             </div>
                             <div class="pl15 pr15">
@@ -312,9 +298,8 @@
                             </div>
                         </li>
                         <li>
-                            <i class="zhejiao"></i>
+                            <i class="icon-huanqing"></i>
                             <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
                                 <h3>项目：知名电气企业流动资金项目</h3>
                             </div>
                             <div class="pl15 pr15">
@@ -331,22 +316,20 @@
                             </div>
                             <p class="p1">高收益 有保障</p>
                             <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-gray" href="#">已还清</a>
                             </div>
                             <div class="jindu">
-                                已募集<span class="num">58%</span>
+                                已募集<span class="num">100%</span>
                                 <span class="ui-rate">
                                     <span class="progressBar">
-                                        <span style="width: 67%;" class="barIn"></span>
+                                        <span style="width: 100%;" class="barIn"></span>
                                     </span>
                                 </span>
                             </div>
                         </li>
                         <li>
-                            <i class="zhejiao"></i>
                             <i class="icon-full"></i>
                             <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
                                 <h3>项目：知名电气企业流动资金项目</h3>
                             </div>
                             <div class="pl15 pr15">
@@ -370,131 +353,6 @@
                                 <span class="ui-rate">
                                     <span class="progressBar">
                                         <span style="width: 100%;" class="barIn"></span>
-                                    </span>
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="zhejiao"></i>
-                            <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
-                                <h3>项目：知名电气企业流动资金项目</h3>
-                            </div>
-                            <div class="pl15 pr15">
-                                <div class="attr f-cb">
-                                    <div class="attr-c">
-                                        <p class="red">13.8%</p>
-                                        <p>年化收益率</p>
-                                    </div>
-                                    <div class="attr-c">
-                                        <p class="blank">90</p>
-                                        <p>项目期限[天]</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
-                            </div>
-                            <div class="jindu">
-                                已募集<span class="num">58%</span>
-                                <span class="ui-rate">
-                                    <span class="progressBar">
-                                        <span style="width: 67%;" class="barIn"></span>
-                                    </span>
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="zhejiao"></i>
-                            <i class="icon-huanqing"></i>
-                            <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
-                                <h3>项目：知名电气企业流动资金项目</h3>
-                            </div>
-                            <div class="pl15 pr15">
-                                <div class="attr f-cb">
-                                    <div class="attr-c">
-                                        <p class="red">13.8%</p>
-                                        <p>年化收益率</p>
-                                    </div>
-                                    <div class="attr-c">
-                                        <p class="blank">90</p>
-                                        <p>项目期限[天]</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-blue" href="#">已还清</a>
-                            </div>
-                            <div class="jindu">
-                                已募集<span class="num">100%</span>
-                                <span class="ui-rate">
-                                    <span class="progressBar">
-                                        <span style="width: 100%;" class="barIn"></span>
-                                    </span>
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="zhejiao"></i>
-                            <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
-                                <h3>项目：知名电气企业流动资金项目</h3>
-                            </div>
-                            <div class="pl15 pr15">
-                                <div class="attr f-cb">
-                                    <div class="attr-c">
-                                        <p class="red">13.8%</p>
-                                        <p>年化收益率</p>
-                                    </div>
-                                    <div class="attr-c">
-                                        <p class="blank">90</p>
-                                        <p>项目期限[天]</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-gray" href="#">流标</a>
-                            </div>
-                            <div class="jindu">
-                                已募集<span class="num">58%</span>
-                                <span class="ui-rate">
-                                    <span class="progressBar">
-                                        <span style="width: 67%;" class="barIn"></span>
-                                    </span>
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="zhejiao"></i>
-                            <div class="name">
-                                <span class="youniu"><img src="../images/index/youniu.png"></span>
-                                <h3>项目：知名电气企业流动资金项目</h3>
-                            </div>
-                            <div class="pl15 pr15">
-                                <div class="attr f-cb">
-                                    <div class="attr-c">
-                                        <p class="red">13.8%</p>
-                                        <p>年化收益率</p>
-                                    </div>
-                                    <div class="attr-c">
-                                        <p class="blank">90</p>
-                                        <p>项目期限[天]</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-deepBlue" href="#">还款中</a>
-                            </div>
-                            <div class="jindu">
-                                已募集<span class="num">58%</span>
-                                <span class="ui-rate">
-                                    <span class="progressBar">
-                                        <span style="width: 67%;" class="barIn"></span>
                                     </span>
                                 </span>
                             </div>
