--- a/html/index.html
+++ b/html/index.html
@@ -26,10 +26,11 @@
                 </div>
                 <div class="f-fr">
                     <ul class="nav-link f-cb">
-                        <li><a href="#"><i class="icon-niu"></i>个人中心</a></li>
+                        <li><a href="#"><i class="icon-user"></i>个人中心<i class="icon-arrow"></i></a></li>
                         <li><a href="#">我要融资</a></li>
-                        <li><a href="#">联系我们</a></li>
-                        <li class="last"><a href="#">帮助</a></li>
+                        <li><a href="#"><i class="icon-kefu"></i>在线客服</a></li>
+                        <li><a href="#">注册</a></li>
+                        <li class="last"><a href="#">登陆</a></li>
                     </ul>
                 </div>
             </div>  
@@ -69,11 +70,11 @@
         <div class="mask-layer-wrap a-bounceinT" style="z-index: 20">
             <div class="mask-layer-join">
                 <div class="box p30">
-                    <p class="f18">稳健性年化收益</p>
+                    <p class="f18 mt10">稳健性年化收益</p>
                     <p class="lilv red">12%-14%</p>
-                    <p class="f16 mb15"><span class="red">100%</span>本金利息保障</p>
+                    <p class="f16 mb30"><span class="red">100%</span>本金利息保障</p>
                     <div><a href="#" class="btn-join">立即注册赚钱</a></div>
-                    <div class="mt20 f-tar">已有账号？<a href="#" class="red">立即登录</a></div>
+                    <div class="mt15 f-tar">已有账号？<a href="#" class="red">立即登录</a></div>
                 </div>
             </div>
             <div class="mask-layer"></div>
@@ -113,7 +114,7 @@
             <div class="ui-notic bgc-white">
                 <div class="ui-title">
                     <a href="#" class="more">更多></a>
-                    <h2><i class="icon-notic"></i>投牛公告</h2>
+                    <h2>投牛公告</h2>
                 </div>
                 <div class="ui-notic-list">
                     <ul>
@@ -130,12 +131,15 @@
 
         <div class="ui-container">
             <div class="ui-newcomer mt15 mb15">
+                <i class="icon-newsimg"></i>
                 <i class="icon-newcomer"></i>
+                <i class="icon-newline icon-newline1"></i>
+                <i class="icon-newline icon-newline2"></i>
                 <div class="item">
                     <div class="f-fl item-info">
-                        <div class="tit"><i class="icon-new"></i>项目：知名电气企业流动资金项目3期</div>
+                        <div class="tit">项目：知名电气企业流动资金项目3期</div>
                         <div class="attr">
-                            <p class="p1">
+                            <p>
                                 <span>预计收益：<em class="red">13.20%</em></span><span>项目总额：120万元</span><span>项目期限：90天</span>
                             </p>
                             <p>
@@ -162,6 +166,18 @@
             </div>
 
             <div class="ui-automatic">
+                <div class="title">
+                    <div class="name"><p>投牛财富宝</p><p>自动投资计划</p></div>
+                    <div class="border"></div>
+                    <div class="titleintro">
+                        <p>
+                            <a target="_blank" href="#">安全保证金初始资金1000万</a>
+                        </p>
+                        <p>定期计提资金滚动加入</p>
+                    </div>
+                    <a class="more" target="_blank" href="#">更多 ></a>
+                    <span class="word">工作日预计9点、13点上线，节假日与周末提前预告。</span>
+                </div>
                 <ul class="f-cb">
                     <li>
                         <div class="tit">
